# Incident-escalation-advisor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
architecture/decisions/: adr-001-llm-selection.md
data/: sample_incidents.json
src/: __init__.py  main.py
src/api/: routes.py  schemas.py
src/automation/: n8n_client.py
src/ingestion/: email_ingestor.py  file_ingestor.py  webhook_ingestor.py
src/intelligence/: incident_classifier.py  severity_scoring.py
src/llm/: client.py  response_parser.py  validator.py
src/preprocessing/: language_detector.py  text_cleaner.py
src/storage/: incident_model.py  models.py  repository.py
src/utils/: exceptions.py  helpers.py  logger.py
tests/integration/: test_full_pipeline.py  test_n8n_webhook.py
tests/unit/: test_ingestion.py  test_intelligence.py  test_llm.py  test_preprocessing.py
